hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php.expectf
*** Testing parse_url() : usage variations ***
Error: 8 - Undefined variable: undefined_var, %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php(61)
Error: 8 - Undefined variable: unset_var, %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php(64)

Arg value 10.5

Warning: parse_url() expects parameter 2 to be integer, double given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value -10.5

Warning: parse_url() expects parameter 2 to be integer, double given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 101234567000

Warning: parse_url() expects parameter 2 to be integer, double given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 1.07654321E-9

Warning: parse_url() expects parameter 2 to be integer, double given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 0.5

Warning: parse_url() expects parameter 2 to be integer, double given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php(70)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php(70)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php(70)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php(70)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php(70)

Arg value Array

Warning: parse_url() expects parameter 2 to be integer, array given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, null given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, null given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 1

Warning: parse_url() expects parameter 2 to be integer, boolean given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, boolean given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 1

Warning: parse_url() expects parameter 2 to be integer, boolean given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, boolean given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, string given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, string given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value string

Warning: parse_url() expects parameter 2 to be integer, string given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value string

Warning: parse_url() expects parameter 2 to be integer, string given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Error: 4096 - Object of class stdClass could not be converted to string, %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php(70)

Arg value 

Warning: parse_url() expects parameter 2 to be integer, object given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, null given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71

Arg value 

Warning: parse_url() expects parameter 2 to be integer, null given in %s/zend/good/ext/standard/tests/url/parse_url_variation_002_64bit.php on line 71
Done